refactor: fixed score test and optimized ScoreRepository